@@ -1,4 +1,4 @@
 DIST dabo-0.8.4.tar.gz 1752993 RMD160 fe8ca3ddb35626606ff19fcb2e9b842bdea58837 SHA1 7cf6887d5062c5a85ea6083d43d702752a3f46e8 SHA256 67b8d8585db0ca2c7867f6712aa5b09b1abc9973879f994a3f4bdf9c0e961290
-EBUILD dabo-0.8.4.ebuild 1289 RMD160 9ebbff90af8a5bec01b0fc2b0bb414c91f4d7024 SHA1 fab675ba0817ce5e49389e3a21bf5b52b0a557af SHA256 2986e218f655acc5f9496913ec171c8e1eb64db024b24cf79a5c2d9dfdbee0fa
-MISC ChangeLog 1614 RMD160 c52c08ae74b232a884c744e8e2aa59b23ce2b353 SHA1 a8f7be555c9e9736a7d20d63c40d8c350ee4baab SHA256 fe565bb9bc9209127828ef7aedd9bb75e7a335415d3935f5971829c263602917
+EBUILD dabo-0.8.4.ebuild 1323 RMD160 07a967ebc21d34437ecf55c1f9312e302fe98bb4 SHA1 2048a6c87d8b63862521fed7efcf3fd2166088bd SHA256 c2b5532a04f429211ba946e06a082c2e8a4e3dbaf65fd36691c3adb8f9baabfc
+MISC ChangeLog 1756 RMD160 cea07a6543d831b25d75f63ea7e09132b62a59c8 SHA1 1c9038cfac21031451f2b3424993a366840e56c5 SHA256 b3bef27175775da0caf4b85a4d5fe4221d45ea39f38761146ab18760131ae4cc
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
